--- a/.gitignore
+++ b/.gitignore
@@ -11,8 +11,14 @@
 # production
 /build
 
+# Firebase cache
+.firebase/
+firebase-debug.log
+firebase-debug.*.log 
+
 # misc
 .DS_Store
+.env
 .env.local
 .env.development.local
 .env.test.local
