--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.9.1",
-    "react-scripts": "^0.0.0",
+    "react-scripts": "^5.0.1",
+    "start": "^5.1.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
